Add tests for function book update with patron

--- a/internal/lending/sqlboiler.toml
+++ b/internal/lending/sqlboiler.toml
@@ -1,7 +1,7 @@
 pkgname = "models"
 output = "adapters/models"
 wipe = true
-no-tests = false
+no-tests = true
 add-enum-types = true
 add-soft-deletes = true
 
